--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/classnames": "^2.3.1",
     "@types/faker": "^6.6.9",
     "@types/jest": "^27.5.2",
     "@types/node": "^17.0.45",
